syntax = "proto3";

package app.v1;

import "app/v1/error.proto";
option go_package = "./protogen/app/v1";

option java_multiple_files = true;

message ListCountriesRequest {
    enum SortField {
        SORT_FIELD_UNSPECIFIED = 0;
        SORT_FIELD_ISO = 1;
        SORT_FIELD_CREATED_AT = 2;
        SORT_FIELD_MODIFIED_AT = 3;
        SORT_FIELD_NAME = 4;
        
    }

    enum SortOrder {
        SORT_ORDER_UNSPECIFIED = 0;
        SORT_ORDER_ASC = 1;
        SORT_ORDER_DESC = 2;
    }

    optional uint32 page_number = 1;
    optional uint32 items_per_page = 2;
    SortField sort_field = 3;
    SortOrder sort_order = 4;
    optional string search = 5;
    bool show_disabled = 6;
}

message CreateCountryRequest {
    string iso_code = 1;
    string name = 2;
    optional string iso_3 = 3;
    uint32 calling_code = 4;
}

message UpdateCountryRequest {
    string iso_code = 1;
    optional string name = 2;
    optional string iso_3 = 3;
    optional uint32 calling_code = 4;
    bool is_active = 5;
}

message DeleteCountryRequest {
    string iso_code = 1;
}

message FetchCountryRequest {
    string iso_code = 1;
}

message ActiviateCountryRequest {
    string iso_code = 1;
}

message DeactiviateCountryRequest {
    string iso_code = 1;
}

message CountriesResponse {
    message Pagingation {
        uint32 current_page = 1;
        uint32 total_results = 2;
        uint32 items_per_page = 3;
    }

    message Data {
        Pagingation pagination = 1;
        repeated Country countries = 2;
    }

    bool isSuccess = 1;
    Data data = 2;
    ErrorResponse error = 3;

}

message CountryResponse {
    bool isSuccess = 1;
    Country data = 2;
    ErrorResponse error = 3;
}

message Country {
    string iso_code = 1;
    string name = 2;
    optional string iso_3 = 3;
    uint32 calling_code = 4;
    bool is_active = 5;
    string created_at = 6;
    string modified_at = 7;
}